--- a/Config.yml
+++ b/Config.yml
@@ -15,5 +15,6 @@ paths:
   anime_dataset_path: './images'
 device: 'cuda'
 factors: [1, 1, 1, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125]
-steps: 30
+steps: 6
+epochs: 10
 
