--- a/Config.yml
+++ b/Config.yml
@@ -1,4 +1,3 @@
-
 alpha: 1e-5
 shapes:
   z_dim: 256
@@ -13,8 +12,9 @@ optimizers:
     lr: 1e-5
 paths:
   anime_dataset_path: './images'
+  yml_path: Config.yml
 device: 'cuda'
 factors: [1, 1, 1, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125]
 steps: 6
-epochs: 10
-
+epochs: 10 
+weights_count: 0
