Добавил модули создания картинок и их сохранения но ещё не связал их с обучением, однако уже можно генерить изображения для теста нейронки

--- a/Config.yml
+++ b/Config.yml
@@ -3,6 +3,7 @@ shapes:
   z_dim: 256
   w_dim: 256
   in_channels: 256
+  batch_size: 16
 optimizers:
   generator_optimizer: 
     name: AdamW
@@ -17,4 +18,4 @@ device: 'cpu'
 factors: [1, 1, 1, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125]
 steps: 6
 epochs: 10 
-weights_count: 2
+weights_count: 3
